tests/expectations/compiler/const_generics/const_generic_shadowing_fail.out
Error [EAST0372013]: the global constant `N` is being shadowed.
    --> compiler-test:8:18
     |
   7 |     const N: u32 = 5;
     |           ^ previous definition of the global constant `N` here
   8 |     inline foo::[N: u32]() {}
     |                  ^ `N` redefined here
     |
     = names must be unique within their scope
